--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -3,21 +3,16 @@
 @tailwind utilities;
 
 body {
-  font-family: 'Roboto Mono', monospace;
+  font-family: 'Philosopher', sans-serif;
 }
-input[type='file'] {
-  width: 100%;
-  &::file-selector-button {
-    margin-right: 20px;
-    border: none;
-    background: #2356ce;
-    padding: 5px 20px;
-    border-radius: 10px;
-    color: #fff;
-    cursor: pointer;
-    transition: background 0.2s ease-in-out;
+@layer components {
+  .title {
+    @apply pt-5 relative text-3xl text-gray-800 font-bold text-left before:content-[''] before:absolute before:bottom-[-10px] before:left-0 before:transform before:-translate-x-0 before:w-[30px] before:h-[2px] before:bg-primary mb-6;
   }
-  &::file-selector-button:hover {
-    background: #2356ce;
+  .container {
+    @apply w-[1200px] max-w-full mx-auto px-5 pt-20;
+  }
+  .custom-icon {
+    @apply bg-[#e3f2fd] flex items-center gap-2.5 text-blue-500 text-xl cursor-pointer px-2.5 py-[5px] rounded-[27px] hover:bg-blue-500 hover:text-white;
   }
 }
