Создал блок книги и footer

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -7,7 +7,7 @@ body {
 }
 @layer components {
   .title {
-    @apply pt-5 relative text-3xl text-gray-800 font-bold text-left before:content-[''] before:absolute before:bottom-[-10px] before:left-0 before:transform before:-translate-x-0 before:w-[30px] before:h-[2px] before:bg-primary mb-6;
+    @apply pb-5 text-3xl;
   }
   .container {
     @apply w-[1200px] max-w-full mx-auto px-5;
