Исправил баги и улучшил код

--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -17,6 +17,6 @@ body {
     @apply w-[1200px] max-w-full mx-auto px-5;
   }
   .custom-icon {
-    @apply bg-[#e3f2fd] flex items-center gap-2.5 text-blue-500 text-xl cursor-pointer px-2.5 py-[5px] rounded-[27px] hover:bg-blue-500 hover:text-white;
+    @apply bg-[#e3f2fd] flex items-center gap-2.5 text-primary text-xl cursor-pointer px-2.5 py-[5px] rounded-[27px] hover:bg-primary hover:text-white;
   }
 }
